fix toggle button

--- a/App.css
+++ b/App.css
@@ -27,7 +27,6 @@
   display: flex;
 }
 
-
 .nav-items li{
   padding: 0.5rem 0.8rem;
   font-size: 1rem;
@@ -55,6 +54,33 @@
   justify-content: space-between;
   color:#FFFF;
 }
+
+
+.nav-items-toggle{
+  margin-right:1rem;
+}
+
+.nav-items-toggle ul{
+  display: flex;
+}
+
+.nav-items-toggle li{
+  padding: 0.5rem 0.8rem;
+  font-size: 1rem;
+  text-align: center;
+  list-style: none;
+}
+
+.nav-items-toggle li a{
+  color:#FFFF;
+  text-decoration: none;
+  display: block;
+}
+
+.nav-items-toggle li a:hover{
+  color: rgb(190, 187, 187);
+}
+
 
 
 .about-container{
@@ -223,7 +249,6 @@
   }
 }
 
-
 .skill-container{
   width:80%;
   margin:auto;
@@ -391,7 +416,7 @@
     font-size: 1.8rem;
     font-weight: bold;
     color:#FFFF;
-    margin-left:1.4rem;
+    margin-left:0.5rem;
     padding: 10px;
   }
 
@@ -404,20 +429,32 @@
     width:100%;
   }
 
-  .nav-items ul{
+  .nav-items-toggle{
+    display: flex;
+    width:100%;
+  }
+
+  .nav-items-toggle ul{
     width:100%;
     flex-direction: column;
     margin:0;
     padding:0;
   }
 
-  .nav-items li{
+  .nav-items-toggle li{
     text-align: center;
     font-size:1rem;
     font-weight: bold;
+    margin:0px auto 3px auto;
+    padding:3px;
   }
 
-  .nav-items.active{
+  .nav-items-toggle li a{
+    text-decoration: none;
+    color: #FFFF;
+  }
+
+  .nav-items-toggle.active{
     display:flex;
   }
 
@@ -761,22 +798,35 @@
     width:100%;
   }
 
-  .nav-items ul{
+  .nav-items-toggle{
+    display: flex;
+    width:100%;
+  }
+
+  .nav-items-toggle ul{
     width:100%;
     flex-direction: column;
     margin:0;
     padding:0;
   }
 
-  .nav-items li{
+  .nav-items-toggle li{
     text-align: center;
-    font-size:1rem;
+    font-size:1.2rem;
     font-weight: bold;
+    margin:5px auto 5px auto;
+    padding:5px;
   }
 
-  .nav-items.active{
+  .nav-items-toggle li a{
+    text-decoration: none;
+    color: #FFFF;
+  }
+
+  .nav-items-toggle.active{
     display:flex;
   }
+
 
   .about-container{
     height:100%;
